--- a/frontend/src/Components/Table/Table.module.scss
+++ b/frontend/src/Components/Table/Table.module.scss
@@ -60,3 +60,17 @@ td {
   transform: scale(1.1);
 }
 
+.col1 {
+  text-align: left;
+  width: 25% !important;
+}
+
+.col2 {
+  text-align: center;
+  width: 10%;
+}
+
+.actions {
+  text-align: center;
+  width: 15%;
+}
