--- a/frontend/src/Components/Button/Button.module.scss
+++ b/frontend/src/Components/Button/Button.module.scss
@@ -22,7 +22,7 @@
   }
 }
 .default {
-  background-color: #FFD8E6;
+  background-color: #e6f6e6;
   border: 1px solid #d0d5dd;
   &:hover {
     background-color: #FFB6C1;
@@ -47,7 +47,7 @@
   color: #fff;
   border: none;
   &:hover {
-    background-color: #5133d6;
+    background-color: #5133d6!important;
   }
 }
 .menu {
