--- a/frontend/src/Components/Table/Table.module.scss
+++ b/frontend/src/Components/Table/Table.module.scss
@@ -1,5 +1,5 @@
 .tableContainer {
-  width: 100%;
+  width: 98%;
   overflow-x: auto;
   margin-bottom: 20px;
 }
@@ -16,17 +16,21 @@ thead {
   background-color: #f5f5f5;
 }
 
-th, td {
-  padding: 12px 15px;
+th{
+  padding: 0!important;
   text-align: center;
-  border-bottom: 1px solid #ddd;
-}
-
-th {
+  border: 1px solid #ddd;
   font-weight: bold;
   color: #333;
   font-size: 14px;
 }
+td {
+  //padding: 12px 3px;
+  text-align: center;
+  border-bottom: 1px solid #ddd;
+}
+
+
 
 tbody tr {
   transition: background-color 0.3s ease;
@@ -73,4 +77,16 @@ td {
 .actions {
   text-align: center;
   width: 15%;
+}
+
+.headerContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.headerContent span {
+  width: 100%;
+  //margin-right: 16px;
 }
